[gd_scene load_steps=14 format=3 uid="uid://biswd6tbjbr0p"]

[ext_resource type="Script" path="res://scripts/character_controller.gd" id="1_flvg4"]
[ext_resource type="AudioStream" uid="uid://b1x34tpl36268" path="res://audio/sfx/hitsounds/player_hit.ogg" id="2_8nd81"]
[ext_resource type="Resource" uid="uid://e1hbyky1jfip" path="res://loot_tables/rock.tres" id="6_gym43"]
[ext_resource type="Texture2D" uid="uid://dxel84o45ospy" path="res://graphics/images/rock.png" id="7_vp0vr"]
[ext_resource type="Script" path="res://scripts/animation_signal_utils.gd" id="8_eeqli"]
[ext_resource type="Script" path="res://scripts/drops.gd" id="9_0rqj5"]
[ext_resource type="Script" path="res://scripts/health_display.gd" id="11_mbl6q"]
[ext_resource type="Texture2D" uid="uid://dximly534w0r1" path="res://graphics/images/shadow.png" id="12_vphvi"]

[sub_resource type="AudioStreamRandomizer" id="AudioStreamRandomizer_n5r78"]
random_pitch = 1.2
streams_count = 1
stream_0/stream = ExtResource("2_8nd81")

[sub_resource type="Animation" id="Animation_wg40q"]
resource_name = "Hit"
length = 1.5
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite:rotation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.2, 0.5, 0.866667, 1.46667),
"transitions": PackedFloat32Array(0.133972, 0.329877, 0.615572, 0.435275, 1),
"update": 0,
"values": [0.698132, -0.349066, 0.174533, -0.0872665, 0.0]
}

[sub_resource type="Animation" id="Animation_4mj1y"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite:rotation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [0.0]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_s51g8"]
_data = {
"Hit": SubResource("Animation_wg40q"),
"RESET": SubResource("Animation_4mj1y")
}

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_s03lr"]
radius = 41.0
height = 194.0

[node name="Rock" type="CharacterBody2D"]
z_index = -10
script = ExtResource("1_flvg4")
is_static = true
health = 24
hurt = SubResource("AudioStreamRandomizer_n5r78")

[node name="Sprite" type="Sprite2D" parent="."]
position = Vector2(0, -35)
texture = ExtResource("7_vp0vr")

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_s51g8")
}
autoplay = "RESET"
script = ExtResource("8_eeqli")

[node name="drop" type="Node2D" parent="."]
script = ExtResource("9_0rqj5")
table = ExtResource("6_gym43")

[node name="Hearts" type="HFlowContainer" parent="."]
top_level = true
offset_left = -528.0
offset_top = -67.0
offset_right = 552.0
offset_bottom = -35.0
alignment = 1
script = ExtResource("11_mbl6q")
heart_size = 64

[node name="Shadows" type="Sprite2D" parent="."]
z_index = -1
y_sort_enabled = true
scale = Vector2(1.5, 0.6)
texture = ExtResource("12_vphvi")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
rotation = 1.57079
shape = SubResource("CapsuleShape2D_s03lr")

[connection signal="on_damage_no_args" from="." to="AnimationPlayer" method="play_one_shot" binds= ["Hit"]]
[connection signal="on_death_no_args" from="." to="." method="destroy_self"]
[connection signal="on_death_no_args" from="." to="drop" method="drop"]
